<resources>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="app_name">AsociaTEC</string>
    <string name="action_logout">Cerrar sesión</string>
    <string name="asociatec_label"></string>
    <string name="session_timeout_title">Sesión expirada</string>
    <string name="session_timeout">Su sesión ha expirado. Por favor, inicie sesión nuevamente.</string>
    <string name="request_timeout">No fue posible establecer una conexión con el servidor. Revise su conexión de red.</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="clave">Contraseña</string>
    <string name="iniciar_sesion_btn">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="registro">Registro</string>
    <string name="edit_text_placeholder">Digite un valor</string>
    <string name="signup_stud_name_label">Nombre</string>
    <string name="signup_stud_lastname1_label">Primer apellido</string>
    <string name="signup_stud_lastname2_label">Segundo apellido</string>
    <string name="signup_student_number_label">Carné</string>
    <string name="signup_student_email_label">Correo electrónico</string>
    <string name="signup_student_password_label">Contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buscar_btn">Buscar</string>
    <string name="titulo_btn">titulo a buscar</string>
    <string name="foro">Foro</string>
    <string name="titulo">Titulo</string>
    <string name="tag">tag</string>
    <string name="contenido">contenido</string>
    <string name="save_changes_label">Guardar cambios</string>
    <string name="delete_student_label">Eliminar estudiante</string>
    <string name="update_password_placeholder">Digite un valor si desea actualizarla</string>
    <string name="modify_student_title">Editar estudiante</string>
    <string name="description_label">Descripción</string>
    <string name="delete_label">Eliminar</string>
    <string name="own_registrarions_hint">Aquí puede ver sus inscripciones pasadas y futuras. Recuerde que puede confirmar su asistencia en las 24 horas previas al inicio del evento. También puede enviar retroalimentación sobre sus eventos confirmados una vez que hayan finalizado.</string>
    <string name="creacion_conversacion">Crear conversación</string>
    <string name="nombre_del_tag">Nombre del tag</string>
    <string name="rate_event_hint">A continuación, seleccione una calificación para el evento y, opcionalmente, ingrese un comentario para la asociación organizadora.</string>
    <string name="new_proposal_hint">A continuación, podrá hacer una propuesta a la asociación de su preferencia.</string>
</resources>