<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ModifyStudentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/menuTitle"
            android:text="@string/modify_student_title"/>

        <TextView
            style="@style/FilterLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_stud_name_label" />

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/edit_text_placeholder"
            android:inputType="text" />

        <TextView
            style="@style/FilterLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_stud_lastname1_label" />

        <EditText
            android:id="@+id/lastname1_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/edit_text_placeholder"
            android:inputType="text" />

        <TextView
            style="@style/FilterLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_stud_lastname2_label" />

        <EditText
            android:id="@+id/lastname2_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/edit_text_placeholder"
            android:inputType="text" />

        <TextView
            style="@style/FilterLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_student_number_label" />

        <EditText
            android:id="@+id/student_number_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/edit_text_placeholder"
            android:inputType="number" />

        <TextView
            style="@style/FilterLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sede" />

        <ProgressBar
            android:id="@+id/locationProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Spinner
            android:id="@+id/location_spinner"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:visibility="gone" />

        <TextView
            style="@style/FilterLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Carrera" />

        <ProgressBar
            android:id="@+id/careerProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Spinner
            android:id="@+id/career_spinner"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:visibility="gone"/>

        <TextView
            style="@style/FilterLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_student_email_label" />

        <EditText
            android:id="@+id/student_email_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/edit_text_placeholder"
            android:inputType="textEmailAddress" />

        <TextView
            style="@style/FilterLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_student_password_label" />

        <EditText
            android:id="@+id/student_password_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/update_password_placeholder"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp">

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_changes_label" />

            <Button
                android:id="@+id/buttonDelete"
                android:backgroundTint="@color/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_student_label"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>