<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AssociationSignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            style="@style/FilterLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_stud_name_label" />

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/edit_text_placeholder"
            android:inputType="text" />

        <TextView
            style="@style/FilterLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_label" />

        <EditText
            android:id="@+id/description_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_placeholder"
            android:inputType="textMultiLine"
            android:gravity="start|top" />

        <TextView
            style="@style/FilterLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Teléfono" />

        <EditText
            android:id="@+id/phone_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/edit_text_placeholder"
            android:inputType="phone" />

        <TextView
            style="@style/FilterLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sede" />

        <ProgressBar
            android:id="@+id/locationProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Spinner
            android:id="@+id/location_spinner"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:visibility="gone" />

        <TextView
            style="@style/FilterLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Carrera" />

        <ProgressBar
            android:id="@+id/careerProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Spinner
            android:id="@+id/career_spinner"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:visibility="gone"/>

        <TextView
            style="@style/FilterLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_student_email_label" />

        <EditText
            android:id="@+id/email_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/edit_text_placeholder"
            android:inputType="textEmailAddress" />

        <TextView
            style="@style/FilterLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_student_password_label" />

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/edit_text_placeholder"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp" />

    </LinearLayout>


</ScrollView>