<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addConversacion_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="Add Button"
        app:backgroundTint="@color/blue_200"
        app:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:pressedTranslationZ="12dp"
        app:srcCompat="@drawable/agregar_propuesta_icon"
        />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical">

            <TextView
                style="@style/menuTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:text="@string/foro"/>

            <EditText
                android:id="@+id/editTextforo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="7dp"
                android:ems="10"
                android:hint="@string/titulo_btn"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/buttonBuscar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buscar_btn" />


            <!-- Categorias -->

            <!-- Eventos -->


            <LinearLayout
                style="@style/MenuCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerconversacion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>



        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>